--- a/site-prueba.yml
+++ b/site-prueba.yml
@@ -13,7 +13,7 @@
   - name: Launch mysql database container
     docker_container:
       name: db
-      image: mysql:5.7
+      image: docker.io/library/mysql:5.7
       volumes:
         - "{{ db_volume }}:/var/lib/mysql"
       restart: true
