--- a/roles/role-ansible-mysql/tasks/main.yml
+++ b/roles/role-ansible-mysql/tasks/main.yml
@@ -42,6 +42,6 @@
 - name: wait for mysql container
   retries: 5
   delay: 5
-  shell: docker exec -t  mysql sh -c "mysql --user=mysql --password=1234567 -e "SHOW DATABASES;" | grep -c database"
+  shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 -e "SHOW DATABASES;"'
   register: mysql
   until: mysql.rc == 0
