--- a/roles/role-ansible-mysql/tasks/main.yml
+++ b/roles/role-ansible-mysql/tasks/main.yml
@@ -43,6 +43,6 @@
   retries: 5
   delay: 5
   # shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 -e "SHOW DATABASES;"' > /tmp/prueba2.txt
-  shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 < /tmp/database.sql
+  shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 < /tmp/database.sql'
   register: mysql
   until: mysql.rc == 0
