--- a/roles/role-ansible-mysql/tasks/main.yml
+++ b/roles/role-ansible-mysql/tasks/main.yml
@@ -44,6 +44,6 @@
   retries: 5
   delay: 5
   # shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 -e "SHOW DATABASES;"' > /tmp/prueba2.txt
-  shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 -e "use mysql;" < /prueba/database.sql'
+  shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 -e "use mysql;" < /prueba/cuadromandosBD_2021-03-31.sql'
   register: mysql
   until: mysql.rc == 0
