--- a/roles/role-ansible-mysql/tasks/main.yml
+++ b/roles/role-ansible-mysql/tasks/main.yml
@@ -44,6 +44,7 @@
   retries: 100
   delay: 10
   # shell: docker exec -it  mysql sh -c 'mysql --user=mysql --password=1234567 -e "SHOW DATABASES;"' > /tmp/prueba2.txt
-  shell: docker exec -it  mysql sh -c 'mysql --user=mysql -p mysql --password=1234567 -e "SET FOREIGN_KEY_CHECKS = 0;" < /prueba/cuadro.sql'
+  # shell: docker exec -it  mysql sh -c 'mysql --user=mysql -p mysql --password=1234567 -e "SET FOREIGN_KEY_CHECKS = 0;" < /prueba/cuadro.sql'
+  shell: docker exec -it  mysql sh -c 'mysql --user=mysql -p mysql --password=1234567 -e "SET FOREIGN_KEY_CHECKS = 0;"'
   register: mysql
   until: mysql.rc == 0
